--- a/RocketDirectoryMVC/Views/AdminPanel/AdminPanel.cshtml
+++ b/RocketDirectoryMVC/Views/AdminPanel/AdminPanel.cshtml
@@ -1,14 +1,5 @@
 ﻿@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<Nevoweb.RocketDirectoryMVC.Components.MvcData>
 
-<style>
-    body {
-        background: white !important;
-        color: #222 !important;
-    }
-</style>
-
 <div id="simplisity_startpanel" class="simplisity_panel">
-    @Html.Raw(Model.GetSetting("mvc_recyclebin"))
+    @Html.Raw(Model.GetSetting("mvc_adminpanel"))
 </div>
-
-
